@@ -18,9 +18,16 @@ NEXTRELEASE
   - fix RT46739 if a connection breaks the environment handle is
     not thrown away (Martin J. Evans)
 
+  [CHANGE IN BEHAVIOUR]
+
+  - In future versions taf_sleep will be withdrawn as you can simply
+    sleep in your own callback.
+
   [MISCELLANEOUS]
 
-  - hide dr, db and st packages from PAUSE
+  - hide dr, db and st packages from PAUSE (Martin J. Evans)
+
+  - added a few more simple TAF tests (Martin J. Evans)
 
 1.47_00   2012-07-11
 
